Fixed code blocks being too wide

--- a/app/assets/scss/sub-components/_content.scss
+++ b/app/assets/scss/sub-components/_content.scss
@@ -97,6 +97,9 @@
 		&:last-child {
 			margin-block-end: 0;
 		}
+
+		max-width: 100%;
+		overflow: auto;
 	}
 
 	kbd {
